[package]
name = "rust-quiz"
version = "0.0.3"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
license = "CC-BY-SA-4.0"
description = "Medium to hard Rust questions with complete explanations"
homepage = "https://dtolnay.github.io/rust-quiz"
repository = "https://github.com/dtolnay/rust-quiz"
readme = "README.md"
exclude = ["rust-quiz"]
publish = false

[dependencies]
futures = "0.3"
http = "0.2"
hyper = "0.14"
hyper-staticfile = "0.5"
num_cpus = "1.0"
oqueue = "0.1"
parking_lot = "0.11"
pin-project = "1.0"
pulldown-cmark = "0.7"
rayon = "1.0"
regex = "1.0"
remain = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full", "macros"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[patch.crates-io.hyper-staticfile]
# Patch with hyper 0.14 and tokio 1.0 support
# https://github.com/stephank/hyper-staticfile/pull/31
git = "https://github.com/dtolnay-contrib/hyper-staticfile"
branch = "up"
