[package]
name = "rust-quiz"
version = "0.0.6"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Medium to hard Rust questions with complete explanations"
edition = "2021"
exclude = ["rust-quiz"]
homepage = "https://dtolnay.github.io/rust-quiz"
license = "CC-BY-SA-4.0"
publish = false
repository = "https://github.com/dtolnay/rust-quiz"

[dependencies]
clap = { version = "4", features = ["deprecated", "derive"] }
futures = "0.3"
http = "1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-staticfile = "0.10"
hyper-util = { version = "0.1", features = ["tokio"] }
num_cpus = "1.0"
oqueue = "0.1"
parking_lot = "0.12"
pin-project = "1.0"
pulldown-cmark = "0.10"
rayon = "1.0"
regex = "1.0"
remain = "0.2"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full", "macros"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
